assets/style.css
body {
    text-align: center;
}

div:has(img):has(span) {
    display: flex;
    justify-content: center;
}

th.gridjs-th {
    padding: 0.7em !important;
    width: auto;
}

th.gridjs-th > div {
    width: auto !important;
    margin: auto;
}

div.toggle {
    display: flex;
    justify-content: center;
    align-items: center;
}

select.orgs {
    border-radius: 10px;
    font-size: 0.8em;
}

label {
    width: 5em;
    height: 2em;
    position: relative;
    display: block;
    background: #ebebeb;
    border-radius: 200px;
    box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
    inset 0px -5px 15px rgba(255, 255, 255, 0.4);
    cursor: pointer;
    transition: 0.3s;
    &:after {
        content: "";
        width: 1.8em;
        height: 1.8em;
        position: absolute;
        top: 0.1em;
        left: 0.1em;
        background: linear-gradient(180deg, #ffcc89, #d8860b);
        border-radius: 180px;
        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
        transition: 0.3s;
    }
}


svg {
    position: absolute;
    width: 1.2em;
    top: 0.4em;
    z-index: 100;
}

.sun {
    left: 0.4em;
    fill: #fff;
    transition: 0.3s;
}

.moon {
    left: 3.3em;
    fill: #7e7e7e;
    transition: 0.3s;
}

input#darkmode-toggle {
    width: 0;
    height: 0;
    visibility: hidden;
    &:checked + label {
        background: #000;
        &:after {
            left: 4.8em;
            transform: translateX(-100%);
            background: linear-gradient(180deg, #777, #000);
        }
        svg {
            &.sun {
                fill: #7e7e7e;
            }
            &.moon {
                fill: #fff;
            }
        }
    }
    &:active:after {
        width: 26em;
    }
}

body.dark {
    background: #000;
}

body.dark h1, body.dark span, body.dark p {
    color: #fff;
}

body.dark img {
    filter: invert(1);
}

body.dark th {
    background: #151515;
    color: #eee;
}

body td.today, body.dark td.today span {
    color: #87ceeb !important;
}

body td.tomorrow, body.dark td.tomorrow span {
    color: #f54040;
}

body td.white_day {
    background: #000;
    color: #fff;
}

body.dark td.white_day {
    background: #fff;
}

body.dark td.white_day span {
    color: #000;
}

body td.eid, body.dark td.eid span {
    color: #0f0;
}

body span.eid.key, body.dark span.eid.key {
    background: #0f0 !important;
    color: #0f0;
}

body.dark td {
    background: #000;
    color: #fff;
}

body.dark div.gridjs-wrapper {
    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 3px 0px, rgba(255, 255, 255, 0.26) 0px 1px 2px 0px;
}

body.dark select.orgs {
    color: #fff;
    border-color: #eee;
    background: #000;
}

.today_key {
    background: #87ceeb;
    color: #87ceeb !important;
}

.tomorrow_key {
    background: #f54040;
    color: #f54040 !important;
}

.key {
    border-radius: 8px;
    display: inline-block;
}

div.keys span:not(span > span) {
    font-size: 0.6em;
}

body.dark span.white_day.key {
    background: #fff;
    color: #000;
}

body span.white_day {
    background: #000;
    color: #fff;
}

body span.observe.key {
    background: #ffa500;
    color: #ffa500;
}

body td.observe {
    color: #ffa500;
}

.inline {
    display: inline !important;
}

.key.inline {
    display: inline-block !important;
}

body span.arafah {
    background: #eccca2;
    color: #eccca2;
}

body td.arafah, body.dark td.arafah span {
    color: #eccca2;
}

body span.ashura {
    background: #800080;
    color: #800080;
}

body span.ashura_adjacent {
    background: #355e3b;
    color: #355e3b;
}

body td.ashura, body.dark td.ashura span {
    color: #800080;
}

body td.ashura_adjacent, body.dark td.ashura_adjacent span {
    color: #355e3b;
}

body td.eid.today {
    background: linear-gradient(#87ceeb, #0f0) !important;
    color: #000 !important;
}

body.dark td.eid.today span {
    color: #fff !important;
}

body td.ashura.today {
    background: linear-gradient(#87ceeb, #800080);
    color: #000 !important;
}

body.dark td.ashura.today span {
    color: #fff !important;
}

body td.ashura_adjacent.today {
    background: linear-gradient(#87ceeb, #355e3b);
    color: #000 !important;
}

body.dark td.ashura_adjacent.today span {
    color: #fff !important;
}

body td.arafah.today {
    background: linear-gradient(#87ceeb, #eccca2);
    color: #fff !important;
}

body.dark td.arafah.today span {
    color: #000 !important;
}

body td.eid.tomorrow {
    background: linear-gradient(#f54040, #0f0);
    color: #000 !important;
}

body.dark td.eid.tomorrow span {
    color: #fff !important;
}

body td.white_day.tomorrow {
    color: #f54040 !important;
}

body td.ashura.tomorrow {
    background: linear-gradient(#f54040, #800080);
    color: #000 !important;
}

body.dark td.ashura.tomorrow span {
    color: #fff !important;
}

body td.ashura_adjacent.tomorrow {
    background: linear-gradient(#f54040, #355e3b);
    color: #000 !important;
}

body.dark td.ashura_adjacent.tomorrow span {
    color: #fff !important;
}

body td.arafah.tomorrow {
    background: linear-gradient(#f54040, #eccca2);
    color: #000 !important;
}

body.dark td.arafah.tomorrow span {
    color: #fff !important;
}

body td.observe.today {
    background: linear-gradient(#87ceeb, #ffa500);
    color: #000 !important;
}

body.dark td.observe.today span {
    color: #fff !important;
}

body td.observe.tomorrow {
    background: linear-gradient(#f54040, #ffa500);
    color: #000 !important;
}

body.dark td.observe.tomorrow span {
    color: #fff !important;
}

body td.adjacent, body.dark td.adjacent span {
    color: #808080 !important;
}

span.gregorian {
    color: #808080 !important;
}

div.gregorian span {
    float: left;
    display: inline;
    font-size: 0.3em;
}

div.gregorian {
    display: inline-block;
}

body span.hijri_day {
    padding: 12px 24px !important;
}

td {
    padding: 0px 0px 12px 0px !important;
    border-style: none;
}

span.greg_month {
    padding-left: 0.4em;
    padding-top: 0.4em;
}

span.box.day {
    border-bottom-style: solid;
    border-right-style: solid;
    border-color: #e6e7eb;
    border-width: 1px;
    padding: 0.4em;
}

div.gridjs-wrapper {
    overflow-x: hidden;
}

td:not(:has(span)) {
    padding: 12px 24px;
}

td.adjacent.today span, body.dark td.adjacent.today span {
    color: #6ca4bc !important;
}

